admin/admin-backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert -f ../admin/docker-compose.prod.yml
    kompose.version: 1.26.1 (a9d05d509)
  creationTimestamp: null
  labels:
    io.kompose.service: admin-backend
  name: admin-backend
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: admin-backend
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert -f ../admin/docker-compose.prod.yml
        kompose.version: 1.26.1 (a9d05d509)
      creationTimestamp: null
      labels:
        io.kompose.network/admin: "true"
        io.kompose.network/users: "true"
        io.kompose.service: admin-backend
    spec:
      containers:
        - args:
            - python
            - manage.py
            - runserver
            - 0.0.0.0:8000
          image: invista/admin:0.0.1
          name: admin-ms
          ports:
            - containerPort: 8000
          resources: {}
      restartPolicy: Always
status: {}
