admin/admin-db-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert -f ../admin/docker-compose.prod.yml
    kompose.version: 1.26.1 (a9d05d509)
  creationTimestamp: null
  labels:
    io.kompose.service: admin-db
  name: admin-db
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: admin-db
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert -f ../admin/docker-compose.prod.yml
        kompose.version: 1.26.1 (a9d05d509)
      creationTimestamp: null
      labels:
        io.kompose.network/admin: "true"
        io.kompose.service: admin-db
    spec:
      containers:
        - env:
            - name: POSTGRES_DB
              value: admin
            - name: POSTGRES_PASSWORD
              value: a
            - name: POSTGRES_USER
              value: postgres
          image: postgres
          name: admin_db
          ports:
            - containerPort: 5432
          resources: {}
          volumeMounts:
            - mountPath: /var/lib/postgres
              name: admin-db-claim0
      restartPolicy: Always
      volumes:
        - name: admin-db-claim0
          persistentVolumeClaim:
            claimName: admin-db-claim0
status: {}
