admin/admin-queue-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert -f ../admin/docker-compose.prod.yml
    kompose.version: 1.26.1 (a9d05d509)
  creationTimestamp: null
  labels:
    io.kompose.service: admin-queue
  name: admin-queue
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: admin-queue
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert -f ../admin/docker-compose.prod.yml
        kompose.version: 1.26.1 (a9d05d509)
      creationTimestamp: null
      labels:
        io.kompose.network/admin: "true"
        io.kompose.service: admin-queue
    spec:
      containers:
        - args:
            - python
            - consumer.py
          image: admin-queue
          name: admin_queue
          resources: {}
      restartPolicy: Always
status: {}
