admin/admin_backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert -f ../admin/docker-compose.prod.yml
    kompose.version: 1.26.1 (a9d05d509)
  creationTimestamp: null
  labels:
    io.kompose.service: admin-backend
  name: admin_backend
spec:
  ports:
    - name: "8002"
      port: 8002
      targetPort: 8000
  selector:
    io.kompose.service: admin-backend
status:
  loadBalancer: {}
