admin/admin_db-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert -f ../admin/docker-compose.prod.yml
    kompose.version: 1.26.1 (a9d05d509)
  creationTimestamp: null
  labels:
    io.kompose.service: admin-db
  name: admin_db
spec:
  ports:
    - name: "5436"
      port: 5436
      targetPort: 5432
  selector:
    io.kompose.service: admin-db
status:
  loadBalancer: {}
