admin/users-networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  creationTimestamp: null
  name: users
spec:
  ingress:
    - from:
        - podSelector:
            matchLabels:
              io.kompose.network/users: "true"
  podSelector:
    matchLabels:
      io.kompose.network/users: "true"
